fix: remove horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12pt;
 	color: #333;
+  overflow-x:hidden;
 }
 td {
 	padding-left: 50px;
@@ -17,6 +18,7 @@ body {
 	display:flex;
 	flex-direction: column;
 	justify-content: center;
+  align-items: center;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -54,7 +56,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #ffffff;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -231,16 +233,15 @@ nav h1 a {
 	flex-direction: column;
 }
 .inside header {
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-	height: 400px;
   height: 300px;
-  padding-top: 120px;
+  /*padding-top: 120px;*/
   /*height: 87%;
   position: fixed;
   right: 0;
